# Backend

./: .gitignore  Makefile  pyproject.toml
api/: urls.py  views.py
src/: manage.py
src/auth/: tests.py  views.py
src/board/: admin.py  models.py  tasks.py  views.py
src/board/migrations/: 0001_initial.py  0002_remove_like_id_like_board_id.py
src/core/: asgi.py  celery.py  urls.md  urls.py
src/core/settings/: __init__.py  app.py  auth.py  base.py  config.py  database.py  logging.py  middleware.md  middleware.py  oauth.md  oauth.py  password.md  password.py  template.py
src/home/: serializers.md  serializers.py
src/oauth/: models.py
src/utils/: env.py
src/web_socket/: apps.py  consumers.py  routings.py  tests.py
