[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "channels>=4.2.2",
    "channels-redis>=4.2.1",
    "django-split-settings>=1.3.2",
    "djangorestframework>=3.16.0",
    "psycopg2>=2.9.10",
]
