[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "channels>=4.2.2",
    "channels-redis>=4.2.1",
    "dj-rest-auth[with-social]>=7.0.1",
    "django-allauth>=65.8.0",
    "django-cors-headers>=4.7.0",
    "django-split-settings>=1.3.2",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "jwt>=1.3.1",
    "psycopg2>=2.9.10",
    "requests>=2.32.3",
]
